--- a/index.html
+++ b/index.html
@@ -380,9 +380,37 @@
           </button>
           <p class="modal-title">Leave your contacts and we will call you back</p>
           <form class="modal-form">
-            <input type="text" class="modal-input">
-            <input type="text" class="modal-input">
-            <input type="text" class="modal-input">
+            <div class="modal-field">
+              <label for="user-name" class="modal-label">Name</label>
+              <div class="input-wrap">
+                <input type="text" name="user-name" class="modal-input" required id="user-name"/>
+                <svg class="modal-icon" width="18" height="18">
+                  <use href="./images/icons.svg#icon-name"></use>
+                </svg>
+              </div>
+            </div>
+            <div class="modal-field">
+            <label for="user-phone" class="modal-label">Phone</label>
+            <div class="input-wrap">
+            <input type="tel" name="user-phone" class="modal-input" id="user-phone"/>
+            <svg class="modal-icon" width="18" height="18">
+              <use href="./images/icons.svg#icon-phone"></use>
+            </svg>
+            </div>
+            </div>
+            <div class="modal-field">
+            <label for="user-email" class="modal-label">Email</label>
+            <div class="input-wrap">
+            <input type="email" name="user-email" class="modal-input" id="user-email"/>
+            <svg class="modal-icon" width="18" height="18">
+              <use href="./images/icons.svg#icon-email"></use>
+            </svg>
+            </div>
+            </div>
+            <div class="modal-field">
+              <label for="user-text" class="modal-label">Comment</label>
+              <textarea name="user-text" id="user-text" class="modal-textarea" placeholder="Text input"></textarea>
+            </div>
             <button type="submit" class="modal-form-button">Send</button>
           </form>
         </div>
