--- a/index.html
+++ b/index.html
@@ -372,10 +372,15 @@
           <div class="footer-wrapper">
             <p class="wrapper-text">Subscribe</p>
             <form class="footer-form">
-              <!-- <label for="email"> -->
+              <label for="email" class="footer-label">
                 <input type="email" name="email" placeholder="E-mail" class="footer-input">
-              <!-- </label> -->
-              <button type="submit" class="footer-form-button">Subscribe</button>
+              </label>
+              <button type="submit" class="footer-form-button">
+                Subscribe 
+                <svg class="footet-telegram" width="24" height="24">
+                <use href="./images/icons.svg#icon-telegram"></use>
+              </svg>
+            </button>
             </form>
           </div>
         </div>
