--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
             <p class="wrapper-text">Subscribe</p>
             <form class="footer-form">
               <label for="email" class="footer-label">
-                <input type="email" name="email" placeholder="E-mail" class="footer-input"/>
+                <input type="email" name="email" id="email" placeholder="E-mail" class="footer-input"/>
               </label>
               <button type="submit" class="footer-form-button">
                 Subscribe 
