--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
           </div>
         </div>
       </footer>
-      <div class="backdrop">
+      <div class="backdrop is-open">
         <div class="modal">
           <button type="button" class="modal-button">
             <svg class="modal-button-icon" width="8" height="8">
@@ -398,7 +398,7 @@
               <label for="user-name" class="modal-label">Name</label>
               <div class="input-wrap">
                 <input type="text" name="user-name" class="modal-input" required id="user-name"/>
-                <svg class="modal-icon" width="18" height="18">
+                <svg class="modal-icon" width="18" height="24">
                   <use href="./images/icons.svg#icon-name"></use>
                 </svg>
               </div>
@@ -407,7 +407,7 @@
             <label for="user-phone" class="modal-label">Phone</label>
             <div class="input-wrap">
             <input type="tel" name="user-phone" class="modal-input" id="user-phone"/>
-            <svg class="modal-icon" width="18" height="18">
+            <svg class="modal-icon" width="18" height="24">
               <use href="./images/icons.svg#icon-phone"></use>
             </svg>
             </div>
@@ -416,25 +416,25 @@
             <label for="user-email" class="modal-label">Email</label>
             <div class="input-wrap">
             <input type="email" name="user-email" class="modal-input" id="user-email"/>
-            <svg class="modal-icon" width="18" height="18">
+            <svg class="modal-icon" width="18" height="24">
               <use href="./images/icons.svg#icon-email"></use>
             </svg>
             </div>
             </div>
             <div class="modal-field">
-              <label for="user-text" class="modal-label">Comment</label>
-              <textarea name="user-text" id="user-text" class="modal-textarea" placeholder="Text input"></textarea>
+              <label for="user-comment" class="modal-label">Comment</label>
+              <textarea name="user-comment" id="user-comment" class="modal-textarea" placeholder="Text input"></textarea>
             </div>
             <div class="modal-check-field">
-            <input class="modal-check visually-hidden" type="checkbox" name="terms" id="terms" required>
-            <label class="check-text" for="terms">
+            <input class="modal-check visually-hidden" type="checkbox" name="user-privacy" id="user-privacy" value="true" required>
+            <label class="check-text" for="user-privacy">
             <span class="check-text-span">
                 <svg class="check-text-icon" width="10" height="8">
                   <use href="./images/icons.svg#icon-icon-check"></use>
                 </svg>
               </span>
               I accept the terms and conditions of the&nbsp;
-              <a href="">Privacy Policy</a>
+              <a class="check-label-link" href="">Privacy Policy</a>
             </label>
             </div>
             <button type="submit" class="modal-form-button">Send</button>
