--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
           </div>
         </div>
       </footer>
-      <div class="backdrop">
+      <div class="backdrop is-open">
         <div class="modal">
           <button type="button" class="modal-button">
             <svg class="modal-button-icon" width="8" height="8">
@@ -430,7 +430,7 @@
             <label class="check-text" for="user-privacy">
             <span class="check-text-span">
                 <svg class="check-text-icon" width="10" height="8">
-                  <use href="./images/icons.svg#icon-icon-check"></use>
+                  <use href="./images/icons.svg#icon-check"></use>
                 </svg>
               </span>
               I accept the terms and conditions of the&nbsp;
