--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="./css/styles.css">
   </head>
   <body>
-      <header class="header">
+      <!-- <header class="header">
         <div class="container header-container">
         <nav class="header-navigation">
           <a class="header-logo" href="./index.html">Web<span class="header-logo-color">Studio</span></a>
@@ -35,14 +35,14 @@
         </ul>
       </address>
     </div>
-      </header>
+      </header> -->
     <main>
-        <section class="hero">
+        <!-- <section class="hero">
           <div class="container hero-container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button class="hero-button" type="button">Order Service</button>
         </div>
-        </section>
+        </section> -->
 
         <section class="best-sides">
           <div class="container">
@@ -100,7 +100,7 @@
         </div>
         </section>
 
-        <section class="team">
+        <!-- <section class="team">
           <div class="container">
           <h2 class="team-title">Our Team</h2>
           <ul class="team-list">
@@ -254,9 +254,9 @@
             </li>
           </ul>
         </div>
-        </section>
+        </section> -->
 
-        <section class="portfolio">
+        <!-- <section class="portfolio">
           <div class="container">
           <h2 class="porfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list">
@@ -325,9 +325,9 @@
             </li>
           </ul>
         </div>
-        </section>
+        </section> -->
     </main>
-      <footer class="footer">
+      <!-- <footer class="footer">
         <div class="container footer-container">
         <div class="logo-paragraph">
           <a class="footer-logo" href="./index.html">Web<span class="footer-logo-color">Studio</span></a>
@@ -384,7 +384,7 @@
             </form>
           </div>
         </div>
-      </footer>
+      </footer> -->
       <div class="backdrop">
         <div class="modal">
           <button type="button" class="modal-button">
