--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
         </div>
         </section>
 
-        <!-- <section class="portfolio">
+        <section class="portfolio">
           <div class="container">
           <h2 class="porfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list">
@@ -325,7 +325,7 @@
             </li>
           </ul>
         </div>
-        </section> -->
+        </section>
     </main>
       <!-- <footer class="footer">
         <div class="container footer-container">
