--- a/index.html
+++ b/index.html
@@ -262,7 +262,21 @@
           <ul class="portfolio-list">
             <li class="portfolio-item">
               <div class="portfolio-cover-wrap-container">
-              <img src="./images/Bank.jpg" alt="Banking App" width="360" height="300" class="portfolio-img" />
+                <picture>
+                  <source srcset="./images/Bank.jpg 1x, ./images/bank-2x.jpg 2x"
+                    media="(min-width: 1158px)"
+                    />
+                  <source srcset="./images/bank-tab.jpg 1x, ./images/bank-tab-2x.jpg 2x" 
+                    media="(min-width: 768px)"
+                    />
+                  <source srcset="./images/bank-mob.jpg 1x, ./images/bank-mob-2x.jpg 2x" 
+                    media="(min-width: 320px)"
+                    />
+                  <img src="./images/Bank.jpg" 
+                    alt="Banking App" width="360" 
+                    height="300" 
+                    class="portfolio-img"/>
+                </picture>
               <p class="porfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
               </div>
               <div class="portfolio-container">
@@ -272,10 +286,21 @@
             </li>
             <li class="portfolio-item">
               <div class="portfolio-cover-wrap-container">
-                <img  src="./images/cash.jpg" 
-                alt="Cashless Payment"
-                width="360" height="300" 
-                class="portfolio-img" />
+                <picture>
+                  <source srcset="./images/cash.jpg 1x, ./images/cash-2x.jpg 2x"
+                    media="(min-width: 1158px)"
+                    />
+                  <source srcset="./images/cash-tab.jpg 1x, ./images/cash-tab-2x.jpg 2x" 
+                    media="(min-width: 768px)"
+                    />
+                  <source srcset="./images/cash-mob.jpg 1x, ./images/cash-mob-2x.jpg 2x" 
+                    media="(min-width: 320px)"
+                    />
+                    <img  src="./images/cash.jpg" 
+                    alt="Cashless Payment"
+                    width="360" height="300" 
+                    class="portfolio-img" />
+                </picture>
               <p class="porfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
               </div>
               <div class="portfolio-container">
@@ -285,7 +310,21 @@
             </li>
             <li class="portfolio-item">
               <div class="portfolio-cover-wrap-container">
-              <img src="./images/meditation.jpg" alt="Meditation App" width="360" height="300" class="portfolio-img" />
+                <picture>
+                  <source srcset="./images/meditation.jpg 1x, ./images/meditation-2x.jpg 2x"
+                    media="(min-width: 1158px)"
+                    />
+                  <source srcset="./images/meditation-tab.jpg 1x, ./images/meditation-tab-2x.jpg 2x" 
+                    media="(min-width: 768px)"
+                    />
+                  <source srcset="./images/meditation-mob.jpg 1x, ./images/meditation-mob-2x.jpg 2x" 
+                    media="(min-width: 320px)"
+                    />
+                    <img src="./images/meditation.jpg" 
+                    alt="Meditation App"
+                    width="360" height="300" 
+                    class="portfolio-img" />
+                </picture>
               <p class="porfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
               </div>
               <div class="portfolio-container">
@@ -295,7 +334,21 @@
             </li>
             <li class="portfolio-item">
               <div class="portfolio-cover-wrap-container">
-                <img src="./images/taxi.jpg" alt="Taxi Service" width="360" height="300" class="portfolio-img" />
+                <picture>
+                  <source srcset="./images/taxi.jpg 1x, ./images/taxi-2x.jpg 2x"
+                    media="(min-width: 1158px)"
+                    />
+                  <source srcset="./images/taxi-tab.jpg 1x, ./images/taxi-tab-2x.jpg 2x" 
+                    media="(min-width: 768px)"
+                    />
+                  <source srcset="./images/taxi-mob.jpg 1x, ./images/taxi-mob-2x.jpg 2x" 
+                    media="(min-width: 320px)"
+                    />
+                    <img src="./images/taxi.jpg" 
+                    alt="Taxi Service"
+                    width="360" height="300" 
+                    class="portfolio-img" />
+                </picture>
                 <p class="porfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
               </div>
               <div class="portfolio-container">
@@ -305,7 +358,21 @@
             </li>
             <li class="portfolio-item">
               <div class="portfolio-cover-wrap-container">
-                <img src="./images/screen.jpg" alt="Screen Illustaitors" width="360" height="300" class="portfolio-img" />
+                <picture>
+                  <source srcset="./images/screen.jpg 1x, ./images/screen-2x.jpg 2x"
+                    media="(min-width: 1158px)"
+                    />
+                  <source srcset="./images/screen-tab.jpg 1x, ./images/screen-tab-2x.jpg 2x" 
+                    media="(min-width: 768px)"
+                    />
+                  <source srcset="./images/screen-mob.jpg 1x, ./images/screen-mob-2x.jpg 2x" 
+                    media="(min-width: 320px)"
+                    />
+                    <img src="./images/screen.jpg" 
+                    alt="Screen Illustaitors"
+                    width="360" height="300"
+                    class="portfolio-img" />
+                </picture>
                 <p class="porfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
               </div>
               <div class="portfolio-container">
@@ -315,7 +382,21 @@
             </li>
             <li class="portfolio-item">
               <div class="portfolio-cover-wrap-container">
-                <img src="./images/courses.jpg" alt="Online Courses" width="360" height="300" class="portfolio-img" />
+                <picture>
+                  <source srcset="./images/courses.jpg 1x, ./images/courses-2x.jpg 2x"
+                    media="(min-width: 1158px)"
+                    />
+                  <source srcset="./images/courses-tab.jpg 1x, ./images/courses-tab-2x.jpg 2x" 
+                    media="(min-width: 768px)"
+                    />
+                  <source srcset="./images/courses-mob.jpg 1x, ./images/courses-mob-2x.jpg 2x" 
+                    media="(min-width: 320px)"
+                    />
+                    <img src="./images/courses.jpg" 
+                    alt="Online Courses" 
+                    width="360" height="300" 
+                    class="portfolio-img" />
+                </picture>
                 <p class="porfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
               </div>
               <div class="portfolio-container">
