--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="./css/styles.css">
   </head>
   <body>
-      <!-- <header class="header">
+      <header class="header">
         <div class="container header-container">
         <nav class="header-navigation">
           <a class="header-logo" href="./index.html">Web<span class="header-logo-color">Studio</span></a>
@@ -34,8 +34,68 @@
           </li>
         </ul>
       </address>
+      <button type="button" class="menu-open-btn">
+        <svg class="modal-open-btn" width="24" height="24">
+          <use href="./images/icons.svg#icon-modal-open-btn"></use>
+        </svg>
+      </button>
     </div>
-      </header> -->
+    <div class="mob-menu">
+      <button type="button" class="menu-close-btn">
+        <svg class="modal-close-btn" width="24" height="24">
+          <use href="./images/icons.svg#icon-x-close"></use>
+        </svg>
+      </button>
+      <ul class="mob-menu-list">
+        <li class="mob-menu-item">
+          <a class="mob-menu-link" href="./index.html">Studio</a></li>
+        <li class="mob-menu-item">
+          <a class="mob-menu-link" href="">Portfolio</a></li>
+        <li class="mob-menu-item">
+          <a class="mob-menu-link" href="">Contacts</a></li>
+      </ul>
+      <address class="mob-contact-adress">
+        <ul class="mob-contact-list">
+          <li class="mob-contact-list-item">
+            <a class="mob-contact-list-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li class="mob-contact-list-item">
+            <a class="mob-contact-list-link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+          </li>
+        </ul>
+      </address>
+      <ul class="mob-media-list">
+        <li class="mob-media-list-item">
+          <a class="mob-media-link" href="">
+            <svg class="mob-media-icon" width="24" height="24">
+              <use href="./images/icons.svg#icon-instagramf"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="mob-media-list-item">
+          <a class="mob-media-link" href="">
+            <svg class="mob-media-icon" width="24" height="24">
+              <use href="./images/icons.svg#icon-twitterf"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="mob-media-list-item">
+          <a class="mob-media-link" href="">
+            <svg class="mob-media-icon" width="24" height="24">
+              <use href="./images/icons.svg#icon-facebookf"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="mob-media-list-item">
+          <a class="mob-media-link" href="">
+            <svg class="mob-media-icon" width="24" height="24">
+              <use href="./images/icons.svg#icon-linkedinf"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
+    </div>
+      </header>
     <main>
         <section class="hero">
           <div class="container hero-container">
