--- a/index.html
+++ b/index.html
@@ -40,63 +40,63 @@
         </ul>
       </address>
     </div>
-    <div class="mob-menu">
-      <div> 
-        <button type="button" class="menu-close-btn">
-          <svg class="modal-close-btn-icon" width="8" height="8">
-            <use href="./images/icons.svg#icon-x-close"></use>
-          </svg>
-        </button>
-        <ul class="mob-menu-list">
-          <li class="mob-menu-item">
-            <a class="mob-menu-link" href="./index.html">Studio</a></li>
-          <li class="mob-menu-item">
-            <a class="mob-menu-link" href="">Portfolio</a></li>
-          <li class="mob-menu-item">
-            <a class="mob-menu-link" href="">Contacts</a></li>
+    <div class="mob-menu mob-menu-container">
+        <div> 
+          <button type="button" class="menu-close-btn">
+            <svg class="modal-close-btn-icon" width="8" height="8">
+              <use href="./images/icons.svg#icon-x-close"></use>
+            </svg>
+          </button>
+          <ul class="mob-menu-list">
+            <li class="mob-menu-item">
+              <a class="mob-menu-link" href="./index.html">Studio</a></li>
+            <li class="mob-menu-item">
+              <a class="mob-menu-link" href="">Portfolio</a></li>
+            <li class="mob-menu-item">
+              <a class="mob-menu-link" href="">Contacts</a></li>
+          </ul>
+        </div>
+        <address class="mob-contact-adress">
+          <ul class="mob-contact-list">
+            <li class="mob-contact-list-item">
+              <a class="mob-contact-list-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </li>
+            <li class="mob-contact-list-item">
+              <a class="mob-contact-list-link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+            </li>
+          </ul>
+        </address>
+        <ul class="mob-media-list">
+          <li class="mob-media-list-item">
+            <a class="mob-media-link" href="">
+              <svg class="mob-media-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-instagramf"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="mob-media-list-item">
+            <a class="mob-media-link" href="">
+              <svg class="mob-media-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-twitterf"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="mob-media-list-item">
+            <a class="mob-media-link" href="">
+              <svg class="mob-media-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-facebookf"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="mob-media-list-item">
+            <a class="mob-media-link" href="">
+              <svg class="mob-media-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-linkedinf"></use>
+              </svg>
+            </a>
+          </li>
         </ul>
       </div>
-      <address class="mob-contact-adress">
-        <ul class="mob-contact-list">
-          <li class="mob-contact-list-item">
-            <a class="mob-contact-list-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-          </li>
-          <li class="mob-contact-list-item">
-            <a class="mob-contact-list-link" href="tel:+110001111111">+11 (000) 111-11-11</a>
-          </li>
-        </ul>
-      </address>
-      <ul class="mob-media-list">
-        <li class="mob-media-list-item">
-          <a class="mob-media-link" href="">
-            <svg class="mob-media-icon" width="24" height="24">
-              <use href="./images/icons.svg#icon-instagramf"></use>
-            </svg>
-          </a>
-        </li>
-        <li class="mob-media-list-item">
-          <a class="mob-media-link" href="">
-            <svg class="mob-media-icon" width="24" height="24">
-              <use href="./images/icons.svg#icon-twitterf"></use>
-            </svg>
-          </a>
-        </li>
-        <li class="mob-media-list-item">
-          <a class="mob-media-link" href="">
-            <svg class="mob-media-icon" width="24" height="24">
-              <use href="./images/icons.svg#icon-facebookf"></use>
-            </svg>
-          </a>
-        </li>
-        <li class="mob-media-list-item">
-          <a class="mob-media-link" href="">
-            <svg class="mob-media-icon" width="24" height="24">
-              <use href="./images/icons.svg#icon-linkedinf"></use>
-            </svg>
-          </a>
-        </li>
-      </ul>
-    </div>
       </header>
     <main>
         <section class="hero">
@@ -576,8 +576,11 @@
                   <use href="./images/icons.svg#icon-check"></use>
                 </svg>
               </span>
-              I accept the terms and conditions of the&nbsp;
-              <a class="check-label-link" href="">Privacy Policy</a>
+              <!-- I accept the terms and conditions of the&nbsp; -->
+              <span>I accept the terms and conditions of the&nbsp; 
+                <a class="check-label-link" href="">Privacy Policy</a>
+              </span>
+              <!-- <a class="check-label-link" href="">Privacy Policy</a> -->
             </label>
             </div>
             <button type="submit" class="modal-form-button">Send</button>
